# django-graphql-extension

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  log.txt  package-lock.json  package.json  tsconfig.e2e.json  vitest.config.ts
.lh/: package.json.json
.lh/native/: package.json.json
native/: Cargo.toml  package-lock.json  package.json
native/src/: detector.rs  lib.rs  parser.rs  walker.rs
scripts/: generate-icon.mjs
src/: extension.ts  logger.ts  types.ts
src/__tests__/: logger.test.ts
src/__tests__/__mocks__/: vscode.ts
src/__tests__/analysis/: frontendGqlUsage.test.ts  gqlCoverage.test.ts  partialStructure.test.ts  queryStructure.test.ts
src/__tests__/codelens/: camelSnake.test.ts  cursorResolver.test.ts  decorations.test.ts  diagnostics.test.ts  findEntry.test.ts  inlayHints.test.ts  missingFields.test.ts  ownerRouting.test.ts  (+3 more)
src/analysis/: frontendGqlUsage.ts  gqlCoverage.ts  queryStructure.ts
src/codelens/: gqlCodeLensProvider.ts  gqlCursorResolver.ts  gqlDecorations.ts  gqlDiagnostics.ts  gqlInlayHintsProvider.ts  gqlResolver.ts
src/preview/: inspector.ts  liveQueryInspector.ts  queryStructureJson.ts  queryStructureWebview.ts  schemaPreview.ts
src/scanner/: ariadneParser.ts  djangoDetector.ts  grapheneParser.ts  graphqlFileParser.ts  nativeScanner.ts  parseCache.ts  reverseIndex.ts  scanAll.ts  strawberryParser.ts
src/tree/: schemaTreeItem.ts  schemaTreeProvider.ts  searchViewProvider.ts
src/webview/: graphqlViewProvider.ts
test-e2e/: runTests.ts
test-e2e/suite/: fragment.test.ts  index.ts  smoke.test.ts
(+25 files in other folders)
