[package]
name = "django-gql-scanner"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
walkdir = "2"
rayon = "1.10"
sha2 = "0.10"
regex = "1.11"
once_cell = "1.19"
hex = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
